# plotdevice

./: .gitignore  logging_tqdm.py  plots.py  pyproject.toml
plotdevice/: __init__.py  plot_with_matplotlib.py  plot_with_plotly.py  plotdevice.py
src/plotdevice/: __init__.py  plot_drift.py  plot_idm_disabled.py  plot_with_matplotlib.py  plot_with_plotly.py
tests/: test_cometmlrun.py  test_timeseries.py  test_wandbrun.py
